Fix header on mobile

--- a/css/landingStyle.css
+++ b/css/landingStyle.css
@@ -16,8 +16,8 @@ body {
 
 .contact-info {
   padding-top: 1em;
-  font-size: 0.5em;
-  white-space:nowrap;
+  font-size: 0.3em;
+  white-space: nowrap;
 }
 
 a {
@@ -59,6 +59,7 @@ a:active {
 .thumb {
     position:relative;
     overflow:hidden;
+    margin-top: 2em;
 }
 
 .card-img-top {
